# ChangeLog for app-text/dvipng
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/dvipng/ChangeLog,v 1.28 2008/04/08 15:04:25 armin76 Exp $

  08 Apr 2008; Raúl Porcel <armin76@gentoo.org> dvipng-1.9.ebuild:
  alpha/ia64/sparc stable wrt #215735

  08 Apr 2008; Jeroen Roovers <jer@gentoo.org> dvipng-1.9.ebuild:
  Stable for HPPA (bug #215735).

  10 Feb 2008; Alexis Ballier <aballier@gentoo.org> -dvipng-1.8.ebuild:
  remove old

  10 Feb 2008; Alexis Ballier <aballier@gentoo.org> dvipng-1.9.ebuild:
  keyword ~x86-fbsd

  22 Dec 2007; Tobias Scherbaum <dertobi123@gentoo.org> dvipng-1.9.ebuild:
  ppc stable, bug #199765

  18 Dec 2007; Jeroen Roovers <jer@gentoo.org> dvipng-1.9.ebuild:
  Marked ~hppa (bug #195815).

  23 Nov 2007; Markus Rothe <corsair@gentoo.org> dvipng-1.9.ebuild:
  Stable on ppc64; bug #199765

  23 Nov 2007; Raúl Porcel <armin76@gentoo.org> dvipng-1.9.ebuild:
  sparc stable wrt #199765

  22 Nov 2007; Samuli Suominen <drac@gentoo.org> dvipng-1.9.ebuild:
  amd64 stable wrt #199765

  21 Nov 2007; Christian Faulhammer <opfer@gentoo.org> dvipng-1.9.ebuild:
  stable x86, bug 199765

  25 Oct 2007; Raúl Porcel <armin76@gentoo.org> dvipng-1.9.ebuild:
  Add ~alpha/~ia64 wrt #195815

  14 Oct 2007; Alexis Ballier <aballier@gentoo.org> dvipng-1.8.ebuild,
  dvipng-1.9.ebuild:
  virtual/tetex -> virtual/latex-base, quote D

  15 May 2007; Christian Faulhammer <opfer@gentoo.org> metadata.xml,
  dvipng-1.8.ebuild, dvipng-1.9.ebuild:
  added check for jpeg and png USE flags enabled in media-libs/gd; added emacs
  team to metadata.xml

  06 May 2007; Markus Rothe <corsair@gentoo.org> dvipng-1.8.ebuild:
  Stable on ppc64; bug #177348

  12 Mar 2007; Alexandre Buisse <nattfodd@gentoo.org> metadata.xml:
  Replaced text-markup by tex as maintaining herd (text-markup split).

*dvipng-1.9 (08 Feb 2007)

  08 Feb 2007; Christian Faulhammer <opfer@gentoo.org> -dvipng-1.5.ebuild,