@@ -1,4 +1,6 @@
+DIST dvipng-1.10.tar.gz 167271 RMD160 c8da14239cbf7477119280f517769b1df3d5f4b4 SHA1 151d3c774b2d34395d1888faf547253796ab0183 SHA256 4b3a938a472a4b7f608a3b2f2a701b463327a3db8bed9185f06dcd521da8b7bd
 DIST dvipng-1.9.tar.gz 165160 RMD160 25768568d042ca3f600b0a5afec3c4416d09d120 SHA1 83e4a0e7da35ad1a6dd62071cc50c1174e68ddde SHA256 974befe1acc217f25e9b8846da0efa13138f18be55132a944241623cd25a02e1
+EBUILD dvipng-1.10.ebuild 1167 RMD160 8db2855d653b7c7a9acafd52d8f37296382d7377 SHA1 5261994580b0b57103c0e3fcc85872606a69169a SHA256 13c4b25136e3cc3aa02fbfaa9986f7cee2316cc72f2f12be6092a09302adfe97
 EBUILD dvipng-1.9.ebuild 1164 RMD160 78657686aefc3976cc9745f08d49443e2d2c81cd SHA1 925f8a6962a394e383e894b5c0adad80a05f4d19 SHA256 13691e450f1a217ffb17d66eb5f4da908732c42cacca6120636153313de82e18
-MISC ChangeLog 3668 RMD160 d0f5636fbcf55e013a44479d594e223347a63ac5 SHA1 b4af52fca3516534640c6d742371a60bef69bdf8 SHA256 b2a24e99b9d190527dd2b04f0272cbca0ed6d763f8206d6591de744aaf53996c
+MISC ChangeLog 3786 RMD160 906ac9a03b66e7b8a54d3ade248fb0ca2ce599a2 SHA1 21537600aea278708503a636e3510eec357e3980 SHA256 55f15b42b883fef9416795d0f84d98fca6e92a2f6ae29ce6eca3b974dafdf1d8
 MISC metadata.xml 175 RMD160 f83529f6c0dddf0438e184fa331a2b6da44bb7fd SHA1 5602272db68de53633aeaf49c94dd948f6005bf6 SHA256 e72a1954a4dc23a98de443a41c29d21f1e68917cc35e0f89c88ffd0c446e6a47
